modified polaris  chip

--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "start": "web-dev-server"
   },
   "dependencies": {
-    "lit": "^3.1.2"
+    "lit": "^3.1.2",
+    "polaris-chip": "file:"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@open-wc/building-rollup": "^2.0.1",
-    "@open-wc/testing": "next",
+    "@open-wc/testing": "^3.2.2",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "@web/dev-server": "^0.1.28",
-    "@web/dev-server-storybook": "next",
+    "@web/dev-server": "^0.4.6",
+    "@web/dev-server-storybook": "^0.0.2",
     "@web/rollup-plugin-html": "^1.10.1",
     "@web/rollup-plugin-import-meta-assets": "^1.0.7",
-    "@web/test-runner": "^0.13.22",
+    "@web/test-runner": "^0.19.0",
     "babel-plugin-template-html-minifier": "^4.1.0",
     "deepmerge": "^4.2.2",
     "rimraf": "^3.0.2",
